--- a/collada-fx.html
+++ b/collada-fx.html
@@ -54,8 +54,9 @@
     if (!Detector.webgl) Detector.addGetWebGLMessage();
 
     var container, stats, clock;
-    var camera, scene, renderer, brody;
+    var camera, controls, scene, renderer, brody;
     var composer, effectFocus;
+    var meshes = [], clonemeshes = [];
 
     init();
     animate();
@@ -84,7 +85,10 @@
 
         var loader = new THREE.ColladaLoader(loadingManager);
         loader.load('models/dae/brody.dae', function (collada) {
-            console.log(collada);
+
+            var positions = combineBuffer(collada, 'position');
+            createMesh(positions, scene, 4.05, -1000, -350, 0, 0xffdd44);
+
             brody = collada.scene;
             brody.scale.x = brody.scale.y = brody.scale.z = 0.1;
 
@@ -138,9 +142,47 @@
 
     }
 
+    function createMesh(positions, scene, scale, x, y, z, color) {
+
+        var geometry = new THREE.BufferGeometry();
+        geometry.addAttribute('position', positions.clone());
+        geometry.addAttribute('initialPosition', positions.clone());
+
+        geometry.attributes.position.setDynamic(true);
+
+        var clones = [
+            [1000, 0, -5000],
+            [0, 0, 0]
+        ];
+
+        for (var i = 0; i < clones.length; i++) {
+
+            var c = (i < clones.length - 1) ? 0x252525 : color;
+
+            mesh = new THREE.Points(geometry, new THREE.PointsMaterial({ size: 30, color: c }));
+            mesh.scale.x = mesh.scale.y = mesh.scale.z = scale;
+
+            mesh.position.x = x + clones[i][0];
+            mesh.position.y = y + clones[i][1];
+            mesh.position.z = z + clones[i][2];
+
+            scene.add(mesh);
+
+            clonemeshes.push({ mesh: mesh, speed: 0.5 + Math.random() });
+
+        }
+
+        meshes.push({
+            mesh: mesh, verticesDown: 0, verticesUp: 0, direction: 0, speed: 15, delay: Math.floor(200 + 200 * Math.random()),
+            start: Math.floor(100 + 200 * Math.random()),
+        });
+
+    }
+
     function combineBuffer(model, bufferName) {
 
             let count = 0;
+            console.log()
 
             model.traverse(function (child) {
 
