--- a/index.html
+++ b/index.html
@@ -31,21 +31,17 @@
 
 
 		<script src="js/three.min.js"></script>
-
+        <script src="js/controls/OrbitControls.js"></script>
         <script src="js/loaders/OBJLoader.js"></script>
-        <script src="js/loaders/ColladaLoader.js"></script>
 
 		<script src="js/shaders/ConvolutionShader.js"></script>
 		<script src="js/shaders/CopyShader.js"></script>
-		<script src="js/shaders/FilmShader.js"></script>
 		<script src="js/shaders/FocusShader.js"></script>
 
 		<script src="js/postprocessing/EffectComposer.js"></script>
 		<script src="js/postprocessing/MaskPass.js"></script>
 		<script src="js/postprocessing/RenderPass.js"></script>
-		<script src="js/postprocessing/BloomPass.js"></script>
 		<script src="js/postprocessing/ShaderPass.js"></script>
-		<script src="js/postprocessing/FilmPass.js"></script>
 
 		<script src="js/Detector.js"></script>
 		<script src="js/libs/stats.min.js"></script>
@@ -54,7 +50,7 @@
 
 			if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 
-			var camera, scene, renderer, mesh, brody;
+			var camera, controls, scene, renderer, mesh, brody;
 
 			var parent, meshes = [], clonemeshes = [];
 
@@ -70,7 +66,7 @@
 			function init() {
 
 				camera = new THREE.PerspectiveCamera( 20, window.innerWidth / window.innerHeight, 1, 50000 );
-				camera.position.set( 0, 700, 7000 );
+                camera.position.set( 0, 700, 7000 );
 
 				scene = new THREE.Scene();
 				scene.background = new THREE.Color( 0x000104 );
@@ -78,44 +74,23 @@
 
                 camera.lookAt( scene.position );
 
-                var loadingManager = new THREE.LoadingManager(function () {
-
-                    scene.add(brody);
-
-                });
-
-                var colladeLoader = new THREE.ColladaLoader(loadingManager);
-                colladeLoader.load('models/dae/brody.dae', function (collada) {
-
-                    brody = collada.scene;
-
-                });
-
 				var loader = new THREE.OBJLoader();
 
-				loader.load( 'models/obj/male02/male02.obj', function ( object ) {
+				loader.load( 'models/obj/gesture.obj', function ( object ) {
 
 					var positions = combineBuffer( object, 'position' );
 
-					createMesh( positions, scene, 4.05,  -500, -350,   600, 0xff7744 );
-					createMesh( positions, scene, 4.05,   500, -350,     0, 0xff5522 );
-					createMesh( positions, scene, 4.05,  -250, -350,  1500, 0xff9922 );
-					createMesh( positions, scene, 4.05,  -250, -350, -1500, 0xff99ff );
+					createMesh( positions, scene, 25,  0, -500, 0, 0xff99ff, true );
 
-				} );
+                } );
 
-				loader.load( 'models/obj/female02/female02.obj', function ( object ) {
+                loader.load('models/obj/brody.obj', function (object) {
 
-					var positions = combineBuffer( object, 'position' );
+                    var positions = combineBuffer(object, 'position');
 
-					createMesh( positions, scene, 4.05, -1000, -350,    0, 0xffdd44 );
-					createMesh( positions, scene, 4.05,     0, -350,    0, 0xffffff );
-					createMesh( positions, scene, 4.05,  1000, -350,  400, 0xff4422 );
-					createMesh( positions, scene, 4.05,   250, -350, 1500, 0xff9955 );
-					createMesh( positions, scene, 4.05,   250, -350, 2500, 0xff77dd );
+                    createMesh(positions, scene, 25, 0, -500, 0, 0x18fbdd, false);
 
-				} );
-
+                });
 
 				renderer = new THREE.WebGLRenderer( { antialias: false } );
 				renderer.setPixelRatio( window.devicePixelRatio );
@@ -124,18 +99,13 @@
 				container.appendChild( renderer.domElement );
 
 				parent = new THREE.Object3D();
-				scene.add( parent );
+                scene.add( parent );
 
-				var grid = new THREE.Points( new THREE.PlaneBufferGeometry( 15000, 15000, 64, 64 ), new THREE.PointsMaterial( { color: 0xff0000, size: 10 } ) );
-				grid.position.y = -400;
-				grid.rotation.x = - Math.PI / 2;
-				parent.add( grid );
+                controls = new THREE.OrbitControls(camera, renderer.domElement);
 
 				// postprocessing
 
 				var renderModel = new THREE.RenderPass( scene, camera );
-				var effectBloom = new THREE.BloomPass( 0.75 );
-				var effectFilm = new THREE.FilmPass( 0.5, 0.5, 1448, false );
 
 				effectFocus = new THREE.ShaderPass( THREE.FocusShader );
 
@@ -147,8 +117,6 @@
 				composer = new THREE.EffectComposer( renderer );
 
 				composer.addPass( renderModel );
-				composer.addPass( effectBloom );
-				composer.addPass( effectFilm );
 				composer.addPass( effectFocus );
 
 				//stats
@@ -213,7 +181,7 @@
 
 			}
 
-			function createMesh( positions, scene, scale, x, y, z, color ) {
+			function createMesh( positions, scene, scale, x, y, z, color, addMesh ) {
 
 				var geometry = new THREE.BufferGeometry();
 				geometry.addAttribute( 'position', positions.clone() );
@@ -222,14 +190,6 @@
 				geometry.attributes.position.setDynamic( true );
 
 				var clones = [
-
-					[  6000, 0, -4000 ],
-					[  5000, 0, 0 ],
-					[  1000, 0, 5000 ],
-					[  1000, 0, -5000 ],
-					[  4000, 0, 2000 ],
-					[ -4000, 0, 1000 ],
-					[ -5000, 0, -5000 ],
 
 					[ 0, 0, 0 ]
 
@@ -246,14 +206,16 @@
 					mesh.position.y = y + clones[ i ][ 1 ];
 					mesh.position.z = z + clones[ i ][ 2 ];
 
-					parent.add( mesh );
+					if (addMesh){
+                        parent.add( mesh );
+                    }
 
 					clonemeshes.push( { mesh: mesh, speed: 0.5 + Math.random() } );
 
 				}
 
 				meshes.push( {
-					mesh: mesh, verticesDown: 0, verticesUp: 0, direction: 0, speed: 15, delay: Math.floor( 200 + 200 * Math.random() ),
+					mesh: mesh, verticesDown: 0, verticesUp: 0, direction: 0, speed: 10, delay: Math.floor( 200 + 200 * Math.random() ),
 					start: Math.floor( 100 + 200 * Math.random() ),
 				} );
 
@@ -262,7 +224,7 @@
 			function animate () {
 
 				requestAnimationFrame( animate );
-				render();
+                render();
 				stats.update();
 
 			}
@@ -273,22 +235,16 @@
 
 				delta = delta < 2 ? delta : 2;
 
-				parent.rotation.y += -0.02 * delta;
-
-				for( var j = 0; j < clonemeshes.length; j ++ ) {
-
-					var cm = clonemeshes[ j ];
-					cm.mesh.rotation.y += -0.1 * delta * cm.speed;
-
-				}
-
-				for( var j = 0; j < meshes.length; j ++ ) {
+				for( var j = 0; j < meshes.length-1; j ++ ) {
 
 					var data = meshes[ j ];
 					var positions = data.mesh.geometry.attributes.position;
-					var initialPositions = data.mesh.geometry.attributes.initialPosition;
+                    var initialPositions = data.mesh.geometry.attributes.initialPosition;
+                    var data2 = meshes[j+1];
+                    var positions2 = data2.mesh.geometry.attributes.initialPosition;
 
-					var count = positions.count;
+                    var count = positions.count;
+                    var count2 = positions2.count;
 
 					if ( data.start > 0 ) {
 
@@ -313,52 +269,73 @@
 						// falling down
 						if ( data.direction < 0 ) {
 
-							if ( py > 0 ) {
+							var ix = positions2.getX(i);
+                            var iy = positions2.getY(i);
+                            var iz = positions2.getZ(i);
 
-								positions.setXYZ(
-									i,
-									px + 1.5 * ( 0.50 - Math.random() ) * data.speed * delta,
-									py + 3.0 * ( 0.25 - Math.random() ) * data.speed * delta,
-									pz + 1.5 * ( 0.50 - Math.random() ) * data.speed * delta
-								);
+                            var dx = Math.abs(px - ix);
+                            var dy = Math.abs(py - iy);
+                            var dz = Math.abs(pz - iz);
 
-							} else {
+                            var d = dx + dy + dx;
 
-								data.verticesDown += 1;
+                            if (d > 1) {
 
-							}
+                                positions.setXYZ(
+                                    i,
+                                    px - (px - ix) / dx * data.speed * delta * (0.85 - Math.random()),
+                                    py - (py - iy) / dy * data.speed * delta * (1 + Math.random()),
+                                    pz - (pz - iz) / dz * data.speed * delta * (0.85 - Math.random()),
+                                );
 
-						}
+                            } else {
+                                positions.setXYZ(
+                                    i,
+                                    ix,
+                                    iy,
+                                    iz,
+                                );
+                                data.verticesDown += 1;
 
-						// rising up
-						if ( data.direction > 0 ) {
-
-							var ix = initialPositions.getX( i );
-							var iy = initialPositions.getY( i );
-							var iz = initialPositions.getZ( i );
-
-							var dx = Math.abs( px - ix );
-							var dy = Math.abs( py - iy );
-							var dz = Math.abs( pz - iz );
-
-							var d = dx + dy + dx;
-
-							if ( d > 1 ) {
-
-								positions.setXYZ(
-									i,
-									px - ( px - ix ) / dx * data.speed * delta * ( 0.85 - Math.random() ),
-									py - ( py - iy ) / dy * data.speed * delta * ( 1 + Math.random() ),
-									pz - ( pz - iz ) / dz * data.speed * delta * ( 0.85 - Math.random() ),
-								);
-
-							} else {
-
-								data.verticesUp += 1;
-
-							}
+                            }
 
 						}
+
+
+                        if (data.direction > 0) {
+
+
+                            var ax = initialPositions.getX(i);
+                            var ay = initialPositions.getY(i);
+                            var az = initialPositions.getZ(i);
+
+                            var ex = Math.abs(px - ax);
+                            var ey = Math.abs(py - ay);
+                            var ez = Math.abs(pz - az);
+
+                            var e = ex + ey + ex;
+
+                            if (e > 1) {
+
+                                positions.setXYZ(
+                                    i,
+                                    px - (px - ax) / ex * data.speed * delta * (0.85 - Math.random()),
+                                    py - (py - ay) / ey * data.speed * delta * (1 + Math.random()),
+                                    pz - (pz - az) / ez * data.speed * delta * (0.85 - Math.random()),
+                                );
+
+                            } else {
+                                positions.setXYZ(
+                                    i,
+                                    ax,
+                                    ay,
+                                    az,
+                                );
+                                data.verticesUp += 1;
+
+                            }
+
+                        }
 
 					}
 
